[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]

[sub_resource type="ImageTexture" id=1]
flags = 23
flags = 23
size = Vector2( 512, 512 )

[sub_resource type="SphereMesh" id=2]

[sub_resource type="Skin" id=3]

[node name="Spatial" type="Spatial"]
process_priority = 1
script = ExtResource( 2 )

[node name="BrowserTexture" type="TextureRect" parent="."]
visible = false
margin_left = 10.0
margin_top = 76.0
margin_right = 1010.0
margin_bottom = 581.0
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.75811, 2.89791, -2.76444 )
mesh = SubResource( 2 )
skin = SubResource( 3 )
material/0 = null

[node name="Camera" type="Camera" parent="MeshInstance"]
transform = Transform( 0.998627, 0.0222595, 0.047424, 0, 0.905243, -0.424894, -0.0523882, 0.424311, 0.904, -1.75811, -3.64, 4.11651 )

[node name="main" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="main"]
margin_right = 163.0
margin_bottom = 70.0
text = "Start Browser"
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="BrowserTexture" to="." method="_on_BrowserTexture_gui_input"]
[connection signal="pressed" from="main/Start" to="." method="_on_Start_pressed"]
